# app/Models/Client.php
@@ -15,6 +15,8 @@ class Client extends Model
         'first_name',
         'last_name',
         'phone',
+        'phone_country_code',
+        'phone_national_number',
         'email',
         'password',
         'date_of_birth',
@@ -22,6 +24,7 @@ class Client extends Model
         'verification_status',
         'selfie_path',
         'id_document_path',
+        'avatar_path',
         'verification_rejection_reason',
         'phone_verified_at',
         'email_verified_at',
